apps/base/ollama/ollama-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama-ingressroute
  annotations:
    gethomepage.dev/href: "https://${HOSTNAME:=ollama}.hephaestus.markmk.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "ollama"
    gethomepage.dev/description: "LLM inference server"
    gethomepage.dev/app: ollama
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons@main/svg/ollama.svg"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${HOSTNAME:=ollama}.hephaestus.markmk.com`)
      kind: Rule
      services:
        - name: ollama
          port: 11434
      middlewares:
        - name: tinyauth
          namespace: tinyauth
